Avoiding forbidden code